fix(tree): vertically center content in kbq-tree-option
Drop the align-self: flex-start override that lifted the toggle and checkbox off center.

Also center the badge in the tree-action-button example.

--- a/packages/components/tree/tree-option.scss
+++ b/packages/components/tree/tree-option.scss
@@ -36,13 +36,6 @@
 
     gap: var(--kbq-tree-size-container-content-gap-horizontal);
 
-    & > *[kbqtreenodetoggle],
-    & > .kbq-tree-node-toggle,
-    & > .kbq-pseudo-checkbox {
-        margin-top: var(--kbq-size-3xs);
-        align-self: flex-start;
-    }
-
     & .kbq-option-text {
         @include common.kbq-line-wrapper-base();
         display: inline-block;
